[package]
name = "poseidon-common"
version = "0.1.0"
authors = ["Poseidon Network Developers"]
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "0.9.3"
hex = "0.4.3"
minreq = { version = "2.6.0", features = ["https-rustls"], optional = true }
rustls = { version = "=0.20.2", optional = true }
sct = { version = "0.7.0", optional = true }
serde = { version = "1.0.136", features = ["derive"] }
sled = { version = "0.34.7", optional = true }

[features]
sled_kv = ["dep:sled"]
solana_client = []
rustls = ["dep:rustls", "dep:sct"]
http = ["dep:rustls", "dep:minreq"]
